--- a/index.html
+++ b/index.html
@@ -2,9 +2,17 @@
 <html>
 <head>
 	<title> HTML5 IndexedDB Peformance Test </title>
+
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	
 	<script src="benchmark.js"></script>
 </head>
 <body>
+	<div style="margin:20px">
 
+		<h2> IndexedDB Benchmark </h2>
+		<p id="output"></p>
+
+	</div>
 </body>
 </html>
