Add general fixes

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 	<div style="margin:20px">
 
 		<h2> IndexedDB Benchmark </h2>
+		<h4> ## Console output ## </h4>
 		<p id="output"></p>
+		<h5> Note: </h5>
+		<p> The console output is also written to the web-console... </p>
 
 	</div>
 </body>
