show result table in UI

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 		<h2> IndexedDB Benchmark </h2>
 		<h4> ## Console output ## </h4>
 		<p id="output"></p>
+		<h4> ## Results ## </h4>
+		<div id="resultTable">
+			<p> See results as soon as benchmark has finished... </p>
+		</div>
 		<h5> Note: </h5>
 		<p> The console output is also written to the web-console... </p>
 
